fix(lineage): fix restricted lineage (#2549)